--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Detilly/chapitre4/issues"
   },
-  "homepage": "https://github.com/Detilly/chapitre4#readme"
+  "homepage": "https://github.com/Detilly/chapitre4#readme",
+  "dependencies": {
+    "uuid": "^8.3.2"
+  }
 }
